tdf#132042 fix nItem id when creating region

Change-Id: I5f2d00dd58580922119b30aafce6695bacb6e2f4